--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "animate": "^1.0.0",
     "axios": "^0.16.1",
     "bootstrap": "^3.3.7",
     "react": "^15.5.4",
