--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,12 +1,12 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Project Overflow",
+  "name": "Project Overflow PWA",
   "icons": [{
-    "src": "favicon.ico",
+    "src": "PO.png",
     "sizes": "192x192",
     "type": "image/png"
   }],
-  "start_url": "./index.html",
+  "start_url": "/?utm_source=homescreen",
   "display": "standalone",
   "theme_color": "#000000",
   "background_color": "#ffffff"
